<resources>

    <string name="app_name">여기어때</string>

    <!-- Naming Rules -->


    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->


    <!-- Common -->


    <!-- Main -->

    <string name="login_email_pwd_underlined_text"><u>비밀번호 재설정</u></string>

    <string name="reserve_sale_2000_txt"><u>2천원 할인</u></string>

    <string name="reserve_sale_3000_txt"><u>3천원 할인</u></string>

    <string name="reserve_sale_5000_txt"><u>5천원 할인</u></string>

    <string name="reserve_sale_8000_txt"><u>8천원 할인</u></string>

    <string name="main_btm_nav_home_title">홈</string>

    <string name="main_btm_nav_search_title">검색</string>

    <string name="main_btm_nav_my_location_title">내주변</string>

    <string name="main_btm_nav_my_page_title">내정보</string>

    <string name="main_btm_nav_more_title">더보기</string>

    <!-- Home -->


    <string name="home_btn_try_get_http_method">GET API 보내기</string>

    <string name="home_btn_try_post_http_method">POST API 보내기</string>

    <string name="home_et_id">아이디를 입력하세요.</string>

    <string name="home_et_pw">비밀번호를 입력하세요.</string>

    <!-- MyPage -->


    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>

    <string name="my_page_btn_counting_number">숫자 세기</string>

</resources>