<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/main_btm_nav_home_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/main_btm_nav_search_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_my_location"
        android:enabled="true"
        android:icon="@drawable/ic_my_location"
        android:title="@string/main_btm_nav_my_location_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:enabled="true"
        android:icon="@drawable/ic_my_page"
        android:title="@string/main_btm_nav_my_page_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/main_btm_nav_more_title"
        app:showAsAction="always" />

</menu>